--- a/seventh/app/src/main/AndroidManifest.xml
+++ b/seventh/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShoppingCartProActivity"></activity>
+        <activity android:name=".ShoppingChannelActivity"></activity>
+        <activity android:name=".ShoppingCartProActivity" />
         <activity
             android:name=".ShoppingDetailActivity"
             android:exported="true" />
