--- a/nine/app/src/main/AndroidManifest.xml
+++ b/nine/app/src/main/AndroidManifest.xml
@@ -12,9 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScheduleDetailActivity" android:exported="true"/>
-
-        <activity android:name=".ScheduleActivity" android:exported="true" />
+        <activity
+            android:name=".TabButtonActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ScheduleDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ScheduleActivity"
+            android:exported="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
