第十次作业补充

--- a/ten/app/src/main/AndroidManifest.xml
+++ b/ten/app/src/main/AndroidManifest.xml
@@ -10,10 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".TabFragmentActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme"/>
+        <activity
             android:name=".BannerPagerActivity"
             android:exported="true"
             android:theme="@style/AppCompatTheme" />
-        <activity android:name=".BannerIndicatorActivity" android:exported="true" android:theme="@style/AppCompatTheme"/>
+        <activity
+            android:name=".BannerIndicatorActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".TabLayoutActivity"
             android:exported="true" />
@@ -31,15 +38,15 @@
         <activity
             android:name=".SearchViewActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"/>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".OverflowMenuActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"/>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".ToolbarActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"/>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".TabFirstActivity"
             android:exported="true" />
