--- a/ten/app/src/main/AndroidManifest.xml
+++ b/ten/app/src/main/AndroidManifest.xml
@@ -10,9 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".RecyclerDynamicActivity"
+            android:exported="true" />
+        <activity android:name=".RecyclerStaggeredActivity" android:exported="true"/>
+        <activity android:name=".RecyclerGridActivity" android:exported="true"/>
+        <activity android:name=".RecyclerCombineActivity" android:exported="true"/>
+        <activity android:name=".RecyclerLinearActivity"  android:exported="true"/>
+        <activity
             android:name=".TabFragmentActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"/>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".BannerPagerActivity"
             android:exported="true"
